# orgclone

./: README.md  go.mod  main.go  pyproject.toml
.github/workflows/: release.yml
cmd/: clone.go  default.go  init.go  root.go
internal/config/: config.go
internal/git/: git.go
internal/github/: github.go
internal/gitlab/: gitlab.go
orgclone/: cli.py  cloner.py  config.py
orgclone/providers/: github.py  gitlab.py
